# SPARCED

./: .condarc  .dockerignore  .gitignore  .gitmodules  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  .readthedocs.yml  Compartments.txt  Dockerfile  OmicsData_extended_u87.txt  README.md  SPARCED.txt  SPARCED.xml  SPARCED_10ai.xml  SPARCED_au565.xml  SPARCED_u87i.xml  SPARCEDo4a_v1.txt  SPARCEDo4a_v1.xml  Species.txt  TODO.md  TROUBLESHOOTING.md  cell_definition_mcf10a_sparced.csv  environment.yml  ic_check_local.txt  ic_check_palmetto.txt  kXd2exclude.csv  kube-load.sh  kube-nextflow.config  kube-uncorrupt.sh  lapatinib_response.txt  local-nextflow.config  main.nf  nextflow.config  (+9 more)
.nextflow/: history
Demo/: Initializer.txt  Readme.md  SPARCED.txt  SPARCED.xml  createModel.ipynb  createModel_o4a.ipynb  runModel.ipynb  testModel.ipynb
SPARCED/: .dockerignore  .gitignore  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  CMakeLists.txt  Dockerfile  GrowthStim_stoc_G_0.xlsx  GrowthStim_stoc_S_0.xlsx  ParamsO_v6.xlsx  README.md  Ratelaws_v6.xlsx  RunModel.ipynb  RunModel.py  RunPrep.py  RunSPARCED.py  SGEmodule.py  SPARCED.cpp  SPARCED.h  SPARCED_ModelCreateWrite.ipynb  SPARCED_ModelCreateWrite.py  (+38 more)
SPARCED/models/SPARCED-IFNg/amici_SPARCED_IFNg/: CMakeLists.txt  Jy.h  SPARCED_IFNg.cpp  SPARCED_IFNg.h  SPARCED_IFNg_Jy.cpp  SPARCED_IFNg_dJydsigmay.cpp  SPARCED_IFNg_dJydy.cpp  SPARCED_IFNg_dJydy_colptrs.cpp  SPARCED_IFNg_dJydy_rowvals.cpp  SPARCED_IFNg_deltasx.cpp  SPARCED_IFNg_dsigmaydp.cpp  SPARCED_IFNg_dwdp.cpp  SPARCED_IFNg_dwdp_colptrs.cpp  SPARCED_IFNg_dwdp_rowvals.cpp  SPARCED_IFNg_dwdw.cpp  SPARCED_IFNg_dwdw_colptrs.cpp  SPARCED_IFNg_dwdw_rowvals.cpp  SPARCED_IFNg_dwdx.cpp  SPARCED_IFNg_dwdx_colptrs.cpp  SPARCED_IFNg_dwdx_rowvals.cpp  SPARCED_IFNg_dxdotdp_explicit.cpp  SPARCED_IFNg_dxdotdp_explicit_colptrs.cpp  SPARCED_IFNg_dxdotdp_explicit_rowvals.cpp  SPARCED_IFNg_dxdotdw.cpp  SPARCED_IFNg_dxdotdw_colptrs.cpp  SPARCED_IFNg_dxdotdw_rowvals.cpp  SPARCED_IFNg_dxdotdx_explicit.cpp  SPARCED_IFNg_dxdotdx_explicit_colptrs.cpp  SPARCED_IFNg_dxdotdx_explicit_rowvals.cpp  SPARCED_IFNg_dydp.cpp  SPARCED_IFNg_dydx.cpp  SPARCED_IFNg_root.cpp  SPARCED_IFNg_sigmay.cpp  SPARCED_IFNg_stau.cpp  SPARCED_IFNg_sx0.cpp  SPARCED_IFNg_sx0_fixedParameters.cpp  SPARCED_IFNg_total_cl.cpp  SPARCED_IFNg_w.cpp  SPARCED_IFNg_x0.cpp  SPARCED_IFNg_x0_fixedParameters.cpp  (+21 more)
SPARCED/models/SPARCED-IFNg/amici_SPARCED_IFNg/SPARCED_IFNg/: SPARCED_IFNg.py  __init__.py
SPARCED/models/SPARCED-IFNg/amici_SPARCED_IFNg/swig/: SPARCED_IFNg.i  SPARCED_IFNg_wrap.cpp
SPARCED/models/SPARCED_legacy/amici_SPARCED_legacy/: CMakeLists.txt  SPARCED_legacy.cpp  SPARCED_legacy.h  SPARCED_legacy_Jy.cpp  SPARCED_legacy_dJydsigmay.cpp  SPARCED_legacy_dJydy.cpp  SPARCED_legacy_dJydy_colptrs.cpp  SPARCED_legacy_dJydy_rowvals.cpp  SPARCED_legacy_deltasx.cpp  SPARCED_legacy_dsigmaydp.cpp  SPARCED_legacy_dwdp.cpp  SPARCED_legacy_dwdp_colptrs.cpp  SPARCED_legacy_dwdp_rowvals.cpp  SPARCED_legacy_dwdw.cpp  SPARCED_legacy_dwdw_colptrs.cpp  SPARCED_legacy_dwdw_rowvals.cpp  SPARCED_legacy_dwdx.cpp  SPARCED_legacy_dwdx_colptrs.cpp  SPARCED_legacy_dwdx_rowvals.cpp  SPARCED_legacy_dxdotdp_explicit.cpp  SPARCED_legacy_dxdotdp_explicit_colptrs.cpp  SPARCED_legacy_dxdotdp_explicit_rowvals.cpp  SPARCED_legacy_dxdotdw.cpp  SPARCED_legacy_dxdotdw_colptrs.cpp  SPARCED_legacy_dxdotdw_rowvals.cpp  SPARCED_legacy_dxdotdx_explicit.cpp  SPARCED_legacy_dxdotdx_explicit_colptrs.cpp  SPARCED_legacy_dxdotdx_explicit_rowvals.cpp  SPARCED_legacy_dydp.cpp  SPARCED_legacy_dydx.cpp  SPARCED_legacy_root.cpp  SPARCED_legacy_sigmay.cpp  SPARCED_legacy_stau.cpp  SPARCED_legacy_sx0.cpp  SPARCED_legacy_sx0_fixedParameters.cpp  SPARCED_legacy_total_cl.cpp  SPARCED_legacy_w.cpp  SPARCED_legacy_x0.cpp  SPARCED_legacy_x0_fixedParameters.cpp  SPARCED_legacy_x_rdata.cpp  (+6 more)
SPARCED/models/SPARCED_legacy/amici_SPARCED_legacy/SPARCED_legacy/: SPARCED_legacy.py  __init__.py
SPARCED/models/SPARCED_legacy/amici_SPARCED_legacy/swig/: SPARCED_legacy.i  SPARCED_legacy_wrap.cpp
SPARCED_u87i/: CMakeLists.txt  SPARCED.h  SPARCED_au565.cpp  SPARCED_au565_Jy.cpp  SPARCED_au565_dJydy.cpp  SPARCED_au565_dJydy_rowvals.cpp  SPARCED_au565_dwdx_colptrs.cpp  SPARCED_au565_dwdx_rowvals.cpp  SPARCED_au565_dxdotdw_colptrs.cpp  SPARCED_au565_sigmay.cpp  SPARCED_au565_total_cl.cpp  SPARCED_au565_w.cpp  SPARCED_au565_xdot.cpp  SPARCED_au565_y.cpp  SPARCED_dJydy_colptrs.cpp  SPARCED_dwdw_colptrs.cpp  SPARCED_u87i.cpp  SPARCED_u87i.h  SPARCED_u87i_Jy.cpp  SPARCED_u87i_Jy.h  SPARCED_u87i_dJydsigma.cpp  SPARCED_u87i_dJydy.cpp  SPARCED_u87i_dJydy_colptrs.cpp  SPARCED_u87i_dJydy_rowvals.cpp  SPARCED_u87i_dwdw.cpp  SPARCED_u87i_dwdw_colptrs.cpp  SPARCED_u87i_dwdw_rowvals.cpp  SPARCED_u87i_dwdx.cpp  SPARCED_u87i_dwdx.h  SPARCED_u87i_dwdx_colptrs.cpp  SPARCED_u87i_dwdx_rowvals.cpp  SPARCED_u87i_dxdotdw.cpp  SPARCED_u87i_dxdotdw_colptrs.cpp  SPARCED_u87i_dxdotdw_rowvals.cpp  SPARCED_u87i_dydx.cpp  SPARCED_u87i_k.h  SPARCED_u87i_sigmay.cpp  SPARCED_u87i_total_cl.cpp  SPARCED_u87i_w.cpp  SPARCED_u87i_x0.cpp  (+11 more)
SPARCED_u87i/SPARCED_au565/: SPARCED_au565.py  __init__.py
SPARCED_u87i/SPARCED_u87i/: SPARCED_u87i.py  __init__.py
SPARCED_u87i/swig/: SPARCED_u87i.i  SPARCED_u87i_wrap.cpp
examples/SPARCED_Brep/SPARCED_Brep/: CMakeLists.txt  Compartments_Brep.xlsx  JSparseB.h  MANIFEST.in  SPARCED_Brep_J.cpp  SPARCED_Brep_JSparse.cpp  SPARCED_Brep_JSparseB.cpp  SPARCED_Brep_JSparseB_rowvals.cpp  SPARCED_Brep_Jy.cpp  SPARCED_Brep_dJydy_rowvals.cpp  SPARCED_Brep_dsigmaydp.cpp  SPARCED_Brep_dwdx.cpp  SPARCED_Brep_dwdx_colptrs.cpp  SPARCED_Brep_dxdotdw_colptrs.cpp  SPARCED_Brep_sx0_fixedParameters.cpp  SPARCED_Brep_x0.cpp  SPARCED_Brep_x0_fixedParameters.cpp  SPARCED_Brep_xdot.cpp  compileMexFile.m  dxdotdw.h  setup.py  sigmay.h  wrapfunctions.h
examples/SPARCED_Brep/SPARCED_Brep/swig/: SPARCED_Brep_wrap.cpp
(+1629 files in other folders)
